TFS-101 Выделены профили запуска приложения и добавлена поддержка H@2 базы с миграцией тестовых данных